# nih-plug

nih_plug_egui/src/: lib.rs
nih_plug_vizia/: Cargo.toml
nih_plug_vizia/assets/: theme.css
nih_plug_vizia/src/: editor.rs  vizia_assets.rs
nih_plug_vizia/src/widgets/: resize_handle.rs
plugins/crisp/src/: editor.rs
plugins/examples/gain_gui_vizia/src/: editor.rs
src/: context.rs
src/wrapper/vst3/: inner.rs  util.rs  view.rs
